--- a/computermonitor/templates/computermonitor/backup_list_detail.html
+++ b/computermonitor/templates/computermonitor/backup_list_detail.html
@@ -42,18 +42,30 @@
     <div class="container">
          <div class="col-md-7"> 
             <div class="page-header">
-                    <h2>Computers Backups</h2>  
+                    <h2>Computers Backups </h2>  
                     <div>
-                    <h3><a href="{% url 'computermonitor:computer_backuplist'  %}" data-toggle="tooltip" title="Normal View"  ><span  class="glyphicon glyphicon-th-list"></span></a>
-                       <a onclick="displayAlert()"><span  class="glyphicon glyphicon-trash"></span></a></h3>
+                    <h3><a href="{% url 'computermonitor:computer_backuplist' %}" data-toggle="tooltip" title="Normal View"  ><span  class="glyphicon glyphicon-th-list"></span></a>
+    
+                        {% if backups.count == 0 %}
+                            <a><span  class="glyphicon glyphicon-trash" style="opacity: 0.3"></span></a></h3>
+                        {% else %}   
+                            <a onclick="displayAlert()"><span  class="glyphicon glyphicon-trash"></span></a></h3>
+                        {% endif %}
+                       
+                       
+                       
                     </div>
+                  
+                    <div class="col-md-4"> 
+                        <div id="delete_all_backups_alert" class="alert alert-danger alert-dismissible fade in">
                     
-                    <div id="delete_all_backups_alert" class="alert alert-danger alert-dismissible fade in">
-                
-                            <p>This will remove all Backup logs.</p>
-                           
-                           <a  href="" class="btn btn-danger btn-block">Delete </a>
-                           <button onclick="closeAlert()" class="btn btn-danger btn-block" >Cancel</button>
+                                <p>Are you sure you want to remove all backups?</p>
+                            
+                            <p> 
+                            <a  href="{% url 'computermonitor:remove_all_computerbackups' %}" class="btn btn-danger ">Yes </a>
+                            <button onclick="closeAlert()" class="btn btn-danger " >Cancel</button>
+                           </p> 
+                     
                    </div>
             </div>
                     
